[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-clustering"
version = "0.1.0"
description = "CLI app for clustering data"
readme = "README.md"

license = { file = "LICENSE" }

dependencies = [
    "pre-commit",
    "pytest>=8.2.1",
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
repository = "https://github.com/michalmoninec/data_clustering"
